k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetflow-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetflow-api
  template:
    metadata:
      labels:
        app: dotnetflow-api
    spec:
      containers:
        - name: api
          image: ghcr.io/dsantoreis/dotnetflow:latest
          ports:
            - containerPort: 8080
