k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetflow-api
spec:
  selector:
    app: dotnetflow-api
  ports:
    - port: 80
      targetPort: 8080
