k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnetflow
spec:
  rules:
    - host: dotnetflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnetflow-api
                port:
                  number: 80
